--- a/TravelBlog/Views/Home/index.cshtml
+++ b/TravelBlog/Views/Home/index.cshtml
@@ -6,3 +6,4 @@
 <h1>Travel Blog</h1>
 
 <p>@Html.ActionLink("Locations Visited", "Index", "Locations")</p>
+<p>@Html.ActionLink("Experiences Had", "Index", "Experiences")</p>
