finish CRUD for ExperiencesController

--- a/TravelBlog/Views/Experiences/edit.cshtml
+++ b/TravelBlog/Views/Experiences/edit.cshtml
@@ -21,7 +21,7 @@
 
 
     @Html.LabelFor(model => model.LocationId)
-    @Html.DropDownList("LocationId")
+    @Html.DropDownList("LocationsId")
 
     <input type="submit" value="Submit Changes"/>
 }
