--- a/TravelBlog/Views/Home/index.cshtml
+++ b/TravelBlog/Views/Home/index.cshtml
@@ -7,3 +7,4 @@
 
 <p>@Html.ActionLink("Locations Visited", "Index", "Locations")</p>
 <p>@Html.ActionLink("Experiences Had", "Index", "Experiences")</p>
+<p>@Html.ActionLink("People", "Index", "People")</p>
