--- a/TravelBlog/Views/People/edit.cshtml
+++ b/TravelBlog/Views/People/edit.cshtml
@@ -20,8 +20,8 @@
     @Html.EditorFor(model => model.Description)
 
 
-    @Html.LabelFor(model => model.LocationId)
-    @Html.DropDownList("LocationsId")
+    @Html.LabelFor(model => model.ExperienceId)
+    @Html.DropDownList("ExperiencesId")
 
     <input type="submit" value="Submit Changes"/>
 }
